// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Finished should render when there is a mix of correct and incorrect results 1`] = `
<div>
  <h1>
    Finished
  </h1>
  <div
    style={
      Object {
        "backgroundColor": "#8bc78b",
        "borderRadius": "5px",
        "color": "black",
        "marginBottom": "10px",
        "padding": "20px",
      }
    }
  >
    Result Info Text
  </div>
  <div
    style={Object {}}
  >
    You need 10 or more correct answers to earn a badge. On this 
test you got 2 answer(s) correct.
  </div>
  <div>
    You had 100 seconds left out of the 600 seconds allowed.
  </div>
  <div>
    You correctly answered 2 of the 20 problems.
  </div>
  <h4>
    The problem that took you the longest to answer
  </h4>
  <div>
    <div
      style={
        Object {
          "color": "red",
          "lineHeight": "35px",
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "1.5em",
            "margin": "5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          +
        </span>
      </button>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        +
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        =
      </span>
      <span
        style={
          Object {
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginLeft": 20,
            "padding": 3,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        ✗
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        2.2 seconds
      </span>
    </div>
  </div>
  <h4>
    The problem you answered the fastest
  </h4>
  <div>
    <div
      style={
        Object {
          "color": "red",
          "lineHeight": "35px",
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "1.5em",
            "margin": "5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          +
        </span>
      </button>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        +
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        =
      </span>
      <span
        style={
          Object {
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginLeft": 20,
            "padding": 3,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        ✗
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        2.2 seconds
      </span>
    </div>
  </div>
  <div>
    <h4>
      The ones that you got wrong
    </h4>
    <div>
      <div
        style={
          Object {
            "color": "red",
            "lineHeight": "35px",
          }
        }
      >
        <button
          className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "fontSize": "1.5em",
              "margin": "5px",
            }
          }
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiFab-label"
          >
            +
          </span>
        </button>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          5
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          +
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          5
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          =
        </span>
        <span
          style={
            Object {
              "borderStyle": "solid",
              "borderWidth": 1,
              "marginLeft": 20,
              "padding": 3,
            }
          }
        >
          5
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          ✗
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          2.2 seconds
        </span>
      </div>
      <div
        style={
          Object {
            "color": "green",
            "lineHeight": "35px",
          }
        }
      >
        <button
          className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "fontSize": "1.5em",
              "margin": "5px",
            }
          }
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiFab-label"
          >
            +
          </span>
        </button>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          5
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          +
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          5
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          =
        </span>
        <span
          style={
            Object {
              "borderStyle": "solid",
              "borderWidth": 1,
              "marginLeft": 20,
              "padding": 3,
            }
          }
        >
          10
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          ✔
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          2.2 seconds
        </span>
        <span
          style={
            Object {
              "color": "red",
              "paddingLeft": 20,
            }
          }
        >
          Incorrect answer(s): 3,4,5
        </span>
      </div>
    </div>
  </div>
  <h4>
    How you did (sorted by slowest)
  </h4>
  <div>
    <div
      style={
        Object {
          "color": "red",
          "lineHeight": "35px",
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "1.5em",
            "margin": "5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          +
        </span>
      </button>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        +
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        =
      </span>
      <span
        style={
          Object {
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginLeft": 20,
            "padding": 3,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        ✗
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        2.2 seconds
      </span>
    </div>
    <div
      style={
        Object {
          "color": "green",
          "lineHeight": "35px",
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "1.5em",
            "margin": "5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          +
        </span>
      </button>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        +
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        =
      </span>
      <span
        style={
          Object {
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginLeft": 20,
            "padding": 3,
          }
        }
      >
        10
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        ✔
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        2.2 seconds
      </span>
    </div>
    <div
      style={
        Object {
          "color": "green",
          "lineHeight": "35px",
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "1.5em",
            "margin": "5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          +
        </span>
      </button>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        +
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        =
      </span>
      <span
        style={
          Object {
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginLeft": 20,
            "padding": 3,
          }
        }
      >
        10
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        ✔
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        2.2 seconds
      </span>
      <span
        style={
          Object {
            "color": "red",
            "paddingLeft": 20,
          }
        }
      >
        Incorrect answer(s): 3,4,5
      </span>
    </div>
  </div>
</div>
`;

exports[`Finished should render when there is a single correct result 1`] = `
<div>
  <h1>
    Finished
  </h1>
  <div
    style={
      Object {
        "backgroundColor": "#8bc78b",
        "borderRadius": "5px",
        "color": "black",
        "marginBottom": "10px",
        "padding": "20px",
      }
    }
  >
    Result Info Text
  </div>
  <div
    style={Object {}}
  >
    You need 10 or more correct answers to earn a badge. On this 
test you got 1 answer(s) correct.
  </div>
  <div>
    You had 100 seconds left out of the 600 seconds allowed.
  </div>
  <div>
    You correctly answered 1 of the 20 problems.
  </div>
  <h4>
    The problem that took you the longest to answer
  </h4>
  <div>
    <div
      style={
        Object {
          "color": "green",
          "lineHeight": "35px",
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "1.5em",
            "margin": "5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          +
        </span>
      </button>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        +
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        =
      </span>
      <span
        style={
          Object {
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginLeft": 20,
            "padding": 3,
          }
        }
      >
        10
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        ✔
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        2.2 seconds
      </span>
    </div>
  </div>
  <h4>
    The problem you answered the fastest
  </h4>
  <div>
    <div
      style={
        Object {
          "color": "green",
          "lineHeight": "35px",
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "1.5em",
            "margin": "5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          +
        </span>
      </button>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        +
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        =
      </span>
      <span
        style={
          Object {
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginLeft": 20,
            "padding": 3,
          }
        }
      >
        10
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        ✔
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        2.2 seconds
      </span>
    </div>
  </div>
  <h4>
    How you did (sorted by slowest)
  </h4>
  <div>
    <div
      style={
        Object {
          "color": "green",
          "lineHeight": "35px",
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "1.5em",
            "margin": "5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          +
        </span>
      </button>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        +
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        =
      </span>
      <span
        style={
          Object {
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginLeft": 20,
            "padding": 3,
          }
        }
      >
        10
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        ✔
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        2.2 seconds
      </span>
    </div>
  </div>
</div>
`;

exports[`Finished should render when there is a single incorrect result 1`] = `
<div>
  <h1>
    Finished
  </h1>
  <div
    style={
      Object {
        "backgroundColor": "#8bc78b",
        "borderRadius": "5px",
        "color": "black",
        "marginBottom": "10px",
        "padding": "20px",
      }
    }
  >
    Result Info Text
  </div>
  <div
    style={Object {}}
  >
    You need 10 or more correct answers to earn a badge. On this 
test you got 0 answer(s) correct.
  </div>
  <div>
    You had 100 seconds left out of the 600 seconds allowed.
  </div>
  <div>
    You correctly answered 0 of the 20 problems.
  </div>
  <h4>
    The problem that took you the longest to answer
  </h4>
  <div>
    <div
      style={
        Object {
          "color": "red",
          "lineHeight": "35px",
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "1.5em",
            "margin": "5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          +
        </span>
      </button>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        +
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        =
      </span>
      <span
        style={
          Object {
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginLeft": 20,
            "padding": 3,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        ✗
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        2.2 seconds
      </span>
    </div>
  </div>
  <h4>
    The problem you answered the fastest
  </h4>
  <div>
    <div
      style={
        Object {
          "color": "red",
          "lineHeight": "35px",
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "1.5em",
            "margin": "5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          +
        </span>
      </button>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        +
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        =
      </span>
      <span
        style={
          Object {
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginLeft": 20,
            "padding": 3,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        ✗
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        2.2 seconds
      </span>
    </div>
  </div>
  <div>
    <h4>
      The ones that you got wrong
    </h4>
    <div>
      <div
        style={
          Object {
            "color": "red",
            "lineHeight": "35px",
          }
        }
      >
        <button
          className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "fontSize": "1.5em",
              "margin": "5px",
            }
          }
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiFab-label"
          >
            +
          </span>
        </button>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          5
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          +
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          5
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          =
        </span>
        <span
          style={
            Object {
              "borderStyle": "solid",
              "borderWidth": 1,
              "marginLeft": 20,
              "padding": 3,
            }
          }
        >
          5
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          ✗
        </span>
        <span
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          2.2 seconds
        </span>
      </div>
    </div>
  </div>
  <h4>
    How you did (sorted by slowest)
  </h4>
  <div>
    <div
      style={
        Object {
          "color": "red",
          "lineHeight": "35px",
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "1.5em",
            "margin": "5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          +
        </span>
      </button>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        +
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        =
      </span>
      <span
        style={
          Object {
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginLeft": 20,
            "padding": 3,
          }
        }
      >
        5
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        ✗
      </span>
      <span
        style={
          Object {
            "paddingLeft": 20,
          }
        }
      >
        2.2 seconds
      </span>
    </div>
  </div>
</div>
`;
